assets/css/main.css
/* ... */
			ul.actions.stacked li {
				padding: 1.3rem 0 0 0;
			}

				ul.actions.stacked li:first-child {
					padding-top: 0;
				}

		ul.actions.fit {
			width: calc(100% + 1rem);
		}

			ul.actions.fit li {
				-moz-flex-grow: 1;
				-webkit-flex-grow: 1;
				-ms-flex-grow: 1;
				flex-grow: 1;
				-moz-flex-shrink: 1;
				-webkit-flex-shrink: 1;
				-ms-flex-shrink: 1;
				flex-shrink: 1;
				width: 100%;
			}

				ul.actions.fit li > * {
					width: 100%;
				}

			ul.actions.fit.stacked {
				width: 100%;
			}

/* Icons */

	ul.icons {
		cursor: default;
		list-style: none;
		padding-left: 0;
	}

		ul.icons li {
			display: inline-block;
			padding: 0 1.25rem 0 0;
		}

			ul.icons li:last-child {
				padding-right: 0;
			}

			ul.icons li .icon:before {
				font-size: 1.25rem;
			}

/* Faces */

	ul.faces {
		display: -moz-flex;
		display: -webkit-flex;
		display: -ms-flex;
		display: flex;
		-moz-align-items: center;
		-webkit-align-items: center;
		-ms-align-items: center;
		align-items: center;
		-moz-justify-content: center;
		-webkit-justify-content: center;
		-ms-justify-content: center;
		justify-content: center;
		list-style: none;
		padding-left: 0;
	}

		ul.faces li {
			display: -moz-flex;
			display: -webkit-flex;
			display: -ms-flex;
			display: flex;
			-moz-flex-direction: column;
			-webkit-flex-direction: column;
			-ms-flex-direction: column;
			flex-direction: column;
			-moz-align-items: center;
			-webkit-align-items: center;
			-ms-align-items: center;
			align-items: center;
			padding-left: 0;
			text-align: center;
			margin: 0 0 0 4rem;
		}

			ul.faces li:first-child {
				margin-left: 0;
			}

			ul.faces li > :last-child {
				margin-bottom: 0;
			}

			ul.faces li .image {
				border-radius: 100%;
				margin: 0 0 1.5rem 0;
			}

				ul.faces li .image img {
					border-radius: 100%;
					width: 8rem;
				}

			ul.faces li h3 {
				font-size: 0.8rem;
				margin: 0 0 0.25rem 0;
			}

			ul.faces li p {
				font-size: 0.8rem;
			}

		@media screen and (max-width: 1280px) {

			ul.faces li {
				margin: 0 0 0 3rem;
			}

		}

		@media screen and (max-width: 980px) {

			ul.faces li {
				margin: 0 0 0 2rem;
			}

		}

		@media screen and (max-width: 736px) {

			ul.faces li .image img {
				width: 6rem;
			}

		}

		@media screen and (max-width: 480px) {

			ul.faces {
				display: block;
			}

				ul.faces li {
					margin: 0 0 2rem 0;
				}

					ul.faces li .image img {
						width: 10rem;
					}

					ul.faces li h3 {
						font-size: 1rem;
					}

					ul.faces li p {
						font-size: 1rem;
					}

					ul.faces li:last-child {
						margin-bottom: 0;
					}

		}

/* Table */

	.table-wrapper {
		-webkit-overflow-scrolling: touch;
		overflow-x: auto;
	}

	table {
		margin: 0 0 2rem 0;
		width: 100%;
	}

		table tbody tr {
			border: solid 1px;
			border-left: 0;
			border-right: 0;
		}

		table td {
			padding: 0.75rem 0.75rem;
		}

		table th {
			font-size: 0.9rem;
			font-weight: 600;
			padding: 0 0.75rem 0.75rem 0.75rem;
			text-align: left;
		}

		table thead {
			border-bottom: solid 2px;
		}

		table tfoot {
			border-top: solid 2px;
		}

		table.alt {
			border-collapse: separate;
		}

			table.alt tbody tr td {
				border: solid 1px;
				border-left-width: 0;
				border-top-width: 0;
			}

				table.alt tbody tr td:first-child {
					border-left-width: 1px;
				}

			table.alt tbody tr:first-child td {
				border-top-width: 1px;
			}

			table.alt thead {
				border-bottom: 0;
			}

			table.alt tfoot {
				border-top: 0;
			}

	table tbody tr {
		border-color: rgba(143, 143, 143, 0.25);
	}

		table tbody tr:nth-child(2n + 1) {
			background-color: rgba(143, 143, 143, 0.075);
		}

	table th {
		color: #3f3f3f;
	}

	table thead {
		border-bottom-color: rgba(143, 143, 143, 0.25);
	}

	table tfoot {
		border-top-color: rgba(143, 143, 143, 0.25);
	}

	table.alt tbody tr td {
		border-color: rgba(143, 143, 143, 0.25);
	}

/* Post */

	.post {
		display: -moz-flex;
		display: -webkit-flex;
		display: -ms-flex;
		display: flex;
		-moz-align-items: center;
		-webkit-align-items: center;
		-ms-align-items: center;
		align-items: center;
		margin: 0 0 3.5rem 0;
		min-height: 28rem;
	}

		.post > .content {
			padding: 5rem 4rem 5rem 0;
			width: 60%;
		}

			.post > .content header .category {
				font-weight: 600;
				display: block;
				margin: 0 0 0.35rem 0;
			}

			.post > .content > :last-child {
				margin-bottom: 0;
			}

		.post > .image {
			-moz-align-self: -moz-stretch;
			-webkit-align-self: -webkit-stretch;
			-ms-align-self: -ms-stretch;
			align-self: stretch;
			width: 40%;
			min-height: inherit;
			border-radius: 4px;
		}

			.post > .image img {
				border-radius: 4px;
			}

		.post.alt {
			-moz-flex-direction: row-reverse;
			-webkit-flex-direction: row-reverse;
			-ms-flex-direction: row-reverse;
			flex-direction: row-reverse;
		}

			.post.alt > .content {
				padding: 5rem 0 5rem 4rem;
			}

		.post.style2 {
			border-radius: 4px;
		}

			.post.style2 > .content {
				padding: 5rem 4rem;
			}

			.post.style2 > .image {
				border-radius: 0 4px 4px 0;
			}

				.post.style2 > .image img {
					border-radius: 0 4px 4px 0;
				}

			.post.style2.alt {
				-moz-flex-direction: row-reverse;
				-webkit-flex-direction: row-reverse;
				-ms-flex-direction: row-reverse;
				flex-direction: row-reverse;
			}

				.post.style2.alt > .content {
					padding: 5rem 4rem;
				}

				.post.style2.alt > .image {
					border-radius: 4px 0 0 4px;
				}

					.post.style2.alt > .image img {
						border-radius: 4px 0 0 4px;
					}

		@media screen and (max-width: 980px) {

			.post > .content {
				padding: 4rem 3rem 4rem 0;
				width: 50%;
			}

			.post > .image {
				width: 50%;
			}

			.post.alt > .content {
				padding: 4rem 0 4rem 3rem;
			}

			.post.style2 > .content {
				padding: 4rem 3rem;
			}

			.post.style2.alt > .content {
				padding: 4rem 3rem;
			}

		}
/* ... */

